# base-os

./: .dockerignore  .gitignore  010-build-base-os.hook.chroot  Dockerfile.iso-creator  README.md  build_production.sh  cloud-init.yaml  create_custom_iso.sh  create_iso_docker.sh  create_iso_simple.sh  install_debian_vm.sh  package.json  preseed.cfg  qemu_iso_builder.sh  run_iso_creation_vm.sh  setup.sh  start_vm.sh  tsconfig.json  utm_vm_setup.sh  vm_build_commands.sh
base-os/: TODO.md
docs/: technical-product-requirements.md
mini-app-broadcaster/: TODO.md  package-lock.json  package.json  tsconfig.json
mini-app-broadcaster/app/: globals.css  layout.tsx  page.tsx  theme.css
mini-app-broadcaster/app/.well-known/farcaster.json/: route.ts
mini-app-broadcaster/app/api/broadcast/: route.ts
mini-app-broadcaster/app/broadcast/: page.tsx
mini-app-broadcaster/app/broadcast/confirmation/: page.tsx
mini-app-broadcaster/app/components/: MultiQRProgress.tsx
mini-app-broadcaster/app/resources/censorship-resistance/: page.tsx
mini-app-broadcaster/app/resources/how-to-use/: page.tsx
mini-app-broadcaster/app/resources/security-privacy/: page.tsx
mini-app-broadcaster/lib/: multi-qr.ts
signing-app/: TODO.md  decompress-qr.js  eth-signer-cli.ts  example.sh  package.json  pnpm-lock.yaml
ui/tui/: CMakeLists.txt  Makefile  build.sh  build_minimal.sh  build_wallet_detection.sh  cleanup_vendor.sh  final_format_verification.cpp  prepare-dependencies.sh  quick_test.sh  test_big_qr_payload.cpp  test_nayuki_qr.cpp  test_qr.cpp  test_realistic_qr.cpp  verify_changes_md.cpp  verify_qr_chunking.cpp  verify_setup.sh
ui/tui/include/app/: config.hpp  domain.hpp  logger.hpp  navigation.hpp  qr_generator.hpp  qr_viewer.hpp  router.hpp  state.hpp  validation.hpp  views.hpp  wallet_detector.hpp
ui/tui/src/: config.cpp  hello_world.cpp  logger.cpp  main.cpp  main_with_wallet_detection.cpp  navigation.cpp  qr_generator.cpp  qr_viewer.cpp  qrcodegen.cpp  router.cpp  simple_transaction.cpp  state.cpp  validation.cpp  views.cpp  views_improved.cpp  views_minimal.cpp  views_new.cpp  views_thread_safe.cpp  views_wallet_detection.cpp  wallet_detector.cpp
